# algo_trader

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.rst  README.md  pypi_note.txt  pyproject.toml  setup.cfg  setup.py  test.py
algo_trader/: lotus_signal_generation.py  startbot.py  testnet_lotus.py  teststartbot.py
algo_trader/.spyproject/config/backups/: workspace.ini.bak
algo_trader/clients/: binance_client.py  bitmex_client.py  swagger.json
algo_trader/clients/binance/: __init__.py  binance_client.py  binance_order.py
algo_trader/clients/bitmex/: __init__.py  bitmex_client.py  bitmex_order.py
algo_trader/settings/: __init__.py  api_links.py  bitmex_testnet_lotus_settings.pickle
algo_trader/strategies/: __init__.py  lotus.py
clients/: __init__.py
settings/: api_links.py  testnet_lotus_settings.py
tests/: shouldbetest_Binance.py  shouldbetest_current_price.py  shouldbetest_get_api_signal.py  shouldbetest_os.py  shouldbetest_pos_size.py  shouldbetest_slippage.py  test_Binance.py  test_Slippage.py  test_bitmex_connection.py  test_current_price.py  test_get_api_signal.py  test_os.py  test_pos_size.py  unittests.py
tests/connection/: test_bitmex_connection.py
tests/unit/: test_bitmex_order.py
tests/unit/mock/: mockBrokerSettings.py  test.py
