[tool.poetry]
name = "algo_trader"
version = "3.0.1"
description = "\"Trade execution engine to process API data and transmit orders to Bitmex and other brokers.\""
authors = ["Niclas Hummel <info@algoinvest.online>"]
maintainers = ["Niclas Hummel <info@algoinvest.online>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
algotrader = "algo_trader.startbot:app"